# syntax-and-sematics

./: LICENSE  README.md
certbot/: certbot-installation.sh
livekit/: README.md
livekit/caddy-manual-setup/: README.md
livekit/cloud-init-setup/: README.md  cloud-init.yaml  outbound-trunk.json  sip-participant.json
livekit/lk-outbound-caller-python/: .env.sample  main.py  outbound-trunk.json  requirements.txt  sip-participant.json  working_configs.py
livekit/manual-setup/: README.md
livekit/manual-setup-nginx/: README.md
nginx/: config-file  nginx-installation.sh
postgres/: postgres-s3-backup-guide.md
t0-livekit-agent/: .gitignore  README.md  core.py  docker-compose.yml  general_prompt.md  logger.py  main.py  outbound-trunk.json  pyproject.toml
t0-livekit-agent/config/: tensorzero.toml
